--- a/locale/en/index.json
+++ b/locale/en/index.json
@@ -1,6 +1,13 @@
 {
     "greeting": "Hello. I’m Alma, a free service to help pregnant women deal with life and health during their pregnancy. I’m a “bot” program that lives in Facebook Messenger, designed to ask and answer questions, and connect you to information, videos, groups and advice you can use. Si prefiere Español, escriba “Español” o “Spanish” en cualquier momento. You can learn more about me and my sponsors at www.prego-bot.com. Let me start by asking you a question: are you pregnant? Please know that I don’t share your information with anyone (here is my privacy agreement), and I don’t want you to feel any pressure. My only job is to help you. “Yes”, “No” or “PNA” (prefer not to answer) are all possible answers, so just answer as you please",
-    "welcome_back": "Welcome back to Alma, a free service to help pregnant women deal with life and health during their pregnancy. I’m a “bot” program that lives in Facebook Messenger, designed to ask and answer questions, and connect you to information, videos, groups and advice you can use. Si prefiere Español, escriba “Español” o “Spanish” en cualquier momento. How may I help you today?",
+    "welcome_back": "Welcome back to Alma, a free service to help pregnant women deal with life and health during their pregnancy. I’m a “bot” program that lives in Facebook Messenger, designed to ask and answer questions, and connect you to information, videos, groups and advice you can use. Si prefiere Español, escriba “Español” o “Spanish” en cualquier momento.",
     "instructions": "Do Stuff",
-    "switched_locale": "Your preferred language is now %s."
+    "did_not_understand":"I’m sorry, I didn’t understand that response. My programmers help me get smarter every day.",
+    "switched_locale": "Your preferred language is now %s.",
+    "are_you_pregnant": "are you pregnant?",
+    "what_is_your_due_date": "When are you due?",
+    "congratulations":"Ok. Congratulations! Every woman’s pregnancy journey is different, but every woman should feel supported during their journey. That’s my job. I ask you questions to see how you are doing and feeling weekly throughout the term, and I provide info about the common issues women face during their pregnancy. Here’s a question: would you like to “subscribe” to my free service? There is no cost, no obligation, and you can unsubscribe at any time you like",
+    "wont_say_if_pregnant":"Ok. I’m a robot, so that doesn’t make me sad. If you’d like to explore my content on your own, please visit my website: www.alma-bot.com. I won’t bother you again after this unless you message me first to re-initiate contact. So long",
+    "not_pregnant": "Alright. Not pregnant. My service is for pregnant women, but I invite you to learn more about me and about pregnancy issues.  You can learn more about me and pregnancy issues generally from my website: www.alma-bot.com."
+    
 }
