--- a/locale/en/index.json
+++ b/locale/en/index.json
@@ -1,19 +1,32 @@
 {
-    "greeting": "Hello. I’m Alma, a free service to help pregnant women deal with life and health during their pregnancy. I’m a “bot” program that lives in Facebook Messenger, designed to ask and answer questions, and connect you to information, videos, groups and advice you can use. Si prefiere Español, escriba “Español” o “Spanish” en cualquier momento. You can learn more about me and my sponsors at www.prego-bot.com. Let me start by asking you a question: are you pregnant? Please know that I don’t share your information with anyone (here is my privacy agreement), and I don’t want you to feel any pressure. My only job is to help you. “Yes”, “No” or “PNA” (prefer not to answer) are all possible answers, so just answer as you please",
+    "greeting": "Hi! Welcome! I’m Alma – a messaging bot that helps women manage pregnancies. I provide a supportive presence, trustworthy information and timely advice, based on user responses to questions. Talking to me is always free.  ",
     "welcome_back": "Welcome back to Alma, a free service to help pregnant women deal with life and health during their pregnancy. I’m a “bot” program that lives in Facebook Messenger, designed to ask and answer questions, and connect you to information, videos, groups and advice you can use. Si prefiere Español, escriba “Español” o “Spanish” en cualquier momento.",
-    "intake_start": "Can you provide me with some information? I don’t share your information with anyone.  Enter 'Cancel' to stop at anytime",
+    "intake_start": "Can you provide me with some information? I will never ask you for money or share any of your personal information without your permission.  Enter 'Quit' to stop at anytime",
     "instructions": "Do Stuff",
     "yes_no_pnf": "Yes|No|Prefer not to answer",
+    "yes_no": "Yes|No",
     "help_menu": "Contact Us|Edit Pregnacy Details|Set Language",
     "did_not_understand":"I’m sorry, I didn’t understand that response. My programmers help me get smarter every day.",
     "switched_locale": "Your preferred language is now %s.",
-    "are_you_pregnant": "are you pregnant?",
-    "what_is_your_due_date": "When are you due? (MM/DD/YYYY)",
-    "congratulations":"Ok. Congratulations! Every woman’s pregnancy journey is different, but every woman should feel supported during their journey. That’s my job. I ask you questions to see how you are doing and feeling weekly throughout the term, and I provide info about the common issues women face during their pregnancy. ",
-    "wont_say_if_pregnant":"Ok. I’m a robot, so that doesn’t make me sad. If you’d like to explore my content on your own, please visit my website: www.alma-bot.com. I won’t bother you again after this unless you message me first to re-initiate contact. So long",
-    "not_pregnant": "Alright. Not pregnant. My service is for pregnant women, but I invite you to learn more about me and about pregnancy issues.  You can learn more about me and pregnancy issues generally from my website: www.alma-bot.com.",
+    "are_you_pregnant": "Here’s the big question … at this moment, are you a pregnant woman?",
+    "what_is_your_due_date": "First, what is your DUE DATE? If you aren’t sure, don’t worry ... that’s not unusual!. Just give your best guess. (MM/DD/YYYY)",
+    "congratulations":"Congratulations! Every woman’s pregnancy journey is unique. I ask questions based on how far along you are, and respond with pregnancy info and advice you might find helpful. Would you like to sign up for this service? It’s free and you can cancel at any time.",
+    "sign_up": "Would you like to sign up for this service? It’s free and you can cancel at any time.",
+    "signup_yes": "Fabulous! Just a few questions and then we’ll get started.",
+    "signup_no": "No? Ok then … I won’t message you again. But if you want to learn more about me or browse my library of helpful pregnancy info, go to http://www.alma-bot.com. If you change your mind, just send me a message any time and we’ll begin again",
+    "wont_say_if_pregnant":"Ok. I’m a robot, so that doesn’t make me sad. If you’d like to explore my content on your own, please visit my website: http://www.alma-bot.com. I won’t bother you again after this unless you message me first to re-initiate contact. So long",
+    "not_pregnant": "Alright. Not pregnant. My service is for pregnant women, but I invite you to learn more about me and about pregnancy issues.  You can learn more about me and pregnancy issues generally from my website: http://www.alma-bot.com.",
     "due_date_entered": "Thats Great!",
     "help_text": "Here's what we can help with",
-    "intake_canceled": "Ok we'll skip this for now.   When you are ready come on back"
+    "intake_canceled": "Ok we'll skip this for now.   When you are ready come on back",
+    "how_old_are_you": "How old are you today?",
+    "what_zip_code":"What is the ZIP Code of your primary residence?",
+    "education_level":"What is the highest level of education you have completed?",
+    "education_level_options": "High school diploma or GED|Associate’s Degree|Four-Year Degree|Graduate School|Prefer not to answer",
+    "feeling_statement":"Now, I want to ask about how you are feeling right now. These questions are valuable to help me better understand you, and to help you better understand yourself. There’s no wrong answer.",
+    "anxiety_question":"On a scale of 1 to 5, how would you rate your ANXIETY about your pregnancy today?",
+    "confidence_question":"On a scale of 1 to 5, how would you rate your CONFIDENCE today in your ability to manage the challenges of pregnancy?",
+    "intake_over":"Alright. That’s it for today! After this, I’ll message you with new topics to discuss every Sunday, Tuesday and Thursday at 4pm. Also, you can say “menu” any time and learn about my features and capabilities. Til next time!",
+    "learn_more":"To learn more about me, go to http://www.alma-bot.com. There you will find information about my purpose, history, development team, sponsors and a library of helpful information about managing pregnancy."  
     
 }
