--- a/locale/en/index.json
+++ b/locale/en/index.json
@@ -2,6 +2,7 @@
     "greeting": "Hi! Welcome! I’m Alma – a messaging bot that helps women manage pregnancies. I provide a supportive presence, trustworthy information and timely advice, based on user responses to questions. Talking to me is always free.  ",
     "welcome_back": "Welcome back to Alma, a free service to help pregnant women deal with life and health during their pregnancy. I’m a “bot” program that lives in Facebook Messenger, designed to ask and answer questions, and connect you to information, videos, groups and advice you can use. Si prefiere Español, escriba “Español” o “Spanish” en cualquier momento.",
     "intake_start": "Can you provide me with some information? I will never ask you for money or share any of your personal information without your permission.  Enter 'Quit' to stop at anytime",
+    "intake_edit": "Lets re-fillout the details about your pregancy",
     "instructions": "Do Stuff",
     "yes_no_pnf": "Yes|No|Prefer not to answer",
     "yes_no": "Yes|No",
@@ -26,7 +27,7 @@
     "feeling_statement":"Now, I want to ask about how you are feeling right now. These questions are valuable to help me better understand you, and to help you better understand yourself. There’s no wrong answer.",
     "anxiety_question":"On a scale of 1 to 5, how would you rate your ANXIETY about your pregnancy today?",
     "confidence_question":"On a scale of 1 to 5, how would you rate your CONFIDENCE today in your ability to manage the challenges of pregnancy?",
-    "intake_over":"Alright. That’s it for today! After this, I’ll message you with new topics to discuss every Sunday, Tuesday and Thursday at 4pm. Also, you can say “menu” any time and learn about my features and capabilities. Til next time!",
+    "intake_over":"Alright. That’s it for today! After this, I’ll message you with new topics to discuss periodically. Also, you can say “menu” any time and learn about my features and capabilities. Til next time!",
     "learn_more":"To learn more about me, go to http://www.alma-bot.com. There you will find information about my purpose, history, development team, sponsors and a library of helpful information about managing pregnancy."  
     
 }
