--- a/locale/en/index.json
+++ b/locale/en/index.json
@@ -12,7 +12,7 @@
     "are_you_pregnant": "Here’s the big question … at this moment, are you a pregnant woman?",
     "what_is_your_due_date": "When are you DUE? If you aren’t sure, don’t worry ... that’s not unusual!. Just give your best guess. (MM/DD/YYYY)",
     "congratulations":"Congratulations! Every woman’s pregnancy journey is unique. I ask questions based on how far along you are, and respond with pregnancy info and advice you might find helpful. Would you like to sign up for this service? It’s free and you can cancel at any time.",
-    "sign_up": "Would you like to sign up for this service? It’s free and you can cancel at any time.",
+    "sign_up": "Would you like to use this service? It’s free and you can stop at any time.",
     "signup_yes": "Fabulous! Just a few questions and then we’ll get started.",
     "signup_no": "No? Ok then … I won’t message you again. But if you want to learn more about me or browse my library of helpful pregnancy info, go to http://www.alma-bot.com. If you change your mind, just send me a message any time and we’ll begin again",
     "wont_say_if_pregnant":"Ok. I’m a robot, so that doesn’t make me sad. If you’d like to explore my content on your own, please visit my website: http://www.alma-bot.com. I won’t bother you again after this unless you message me first to re-initiate contact. So long",
