--- a/locale/en/index.json
+++ b/locale/en/index.json
@@ -1,33 +1,35 @@
 {
-    "greeting": "Hi! Welcome! I’m Alma – a messaging bot that helps women manage pregnancies. I provide a supportive presence, trustworthy information and timely advice, based on user responses to questions. Talking to me is always free.  ",
-    "welcome_back": "Welcome back to Alma, a free service to help pregnant women deal with life and health during their pregnancy. I’m a “bot” program that lives in Facebook Messenger, designed to ask and answer questions, and connect you to information, videos, groups and advice you can use. Si prefiere Español, escriba “Español” o “Spanish” en cualquier momento.",
-    "intake_start": "Can you provide me with some information? I will never ask you for money or share any of your personal information without your permission.  Enter 'Quit' to stop at anytime",
+    "greeting": "Hi! Welcome! I’m Alma – a messaging bot that helps women manage pregnancies. I ask you questions and provide answers. Talking to me is always free. ",
+    "welcome_back": "Welcome back {0}!.  Alma is a free messenging service to help pregnant women. I ask you questions and provide answers. Si prefiere Español, escribe 'Español'",
+    "about":"Alma bot is a messaging service to support women throughout their pregnancies. Every woman deserves to feel supported. I ask you questions and provide answers related to health and life. This is a free service and your answers are always kept confidential. Go to www.alma-bot.com for more info.",
+    "intake_start": "Can you provide me with some information? I will never ask you for money or share your personal information without permission. Enter 'Quit' to stop at anytime",
+    "what_is_your_name": "What is your name?",
     "intake_edit": "Lets re-fillout the details about your pregancy",
     "instructions": "Do Stuff",
     "yes_no_pnf": "Yes|No|Prefer not to answer",
     "yes_no": "Yes|No",
-    "help_menu": "Contact Us|Edit Pregnacy Details|Set Language",
+    "help_menu": "Contact Us|Edit Pregnacy Details|Set Language|About",
     "did_not_understand":"I’m sorry, I didn’t understand that response. My programmers help me get smarter every day.",
     "switched_locale": "Your preferred language is now %s.",
-    "are_you_pregnant": "Here’s the big question … at this moment, are you a pregnant woman?",
-    "what_is_your_due_date": "When are you DUE? If you aren’t sure, don’t worry ... that’s not unusual!. Just give your best guess. (MM/DD/YYYY)",
-    "congratulations":"Congratulations! Every woman’s pregnancy journey is unique. I ask questions based on how far along you are, and respond with pregnancy info and advice you might find helpful. Would you like to sign up for this service? It’s free and you can cancel at any time.",
+    "are_you_pregnant": "Here’s the big question … at this moment, are you pregnant?",
+    "what_is_your_due_date": "When are you DUE? If you aren’t sure, don’t worry ... that’s not unusual!. Just give your best guess date. (MM/DD/YYYY)",
+    "congratulations":"Congratulations! Every woman’s pregnancy journey is unique. I ask questions based on how far along you are, and respond with helpful info and advice. Would you like to sign up for this service? It’s free and you can cancel any time.",
     "sign_up": "Would you like to use this service? It’s free and you can stop at any time.",
     "signup_yes": "Fabulous! Just a few questions and then we’ll get started.",
-    "signup_no": "No? Ok then … I won’t message you again. But if you want to learn more about me or browse my library of helpful pregnancy info, go to http://www.alma-bot.com. If you change your mind, just send me a message any time and we’ll begin again",
-    "wont_say_if_pregnant":"Ok. I’m a robot, so that doesn’t make me sad. If you’d like to explore my content on your own, please visit my website: http://www.alma-bot.com. I won’t bother you again after this unless you message me first to re-initiate contact. So long",
-    "not_pregnant": "Alright. Not pregnant. My service is for pregnant women, but I invite you to learn more about me and about pregnancy issues.  You can learn more about me and pregnancy issues generally from my website: http://www.alma-bot.com.",
+    "signup_no": "No? Ok then … I won’t message you again. If you want to browse my library of helpful info on your own, go to http://www.alma-bot.com. And if you change your mind, just send me a message and we’ll begin again",
+    "wont_say_if_pregnant":"Ok. I’m a robot, so that doesn’t make me sad. If you’d like to explore my content on your own, please visit my website: http://www.alma-bot.com. I won’t message you again unless you message me. So long",
+    "not_pregnant": "Alright. Not pregnant. My service is for pregnant women, but I invite you to learn more about me from my website: http://www.alma-bot.com.",
     "due_date_entered": "Thats Great!",
     "help_text": "Here's what we can help with",
     "intake_canceled": "Ok we'll skip this for now.   When you are ready come on back",
     "how_old_are_you": "How old are you today?",
     "what_zip_code":"What is the ZIP Code of your primary residence?",
     "education_level":"What is the highest level of education you have completed?",
-    "education_level_options": "Did not graduate|High school diploma or GED|Associate’s Degree|Four-Year Degree|Graduate School|Prefer not to answer",
-    "feeling_statement":"Now, I want to ask about how you are feeling right now. These questions are valuable to help me better understand you, and to help you better understand yourself. There’s no wrong answer.",
-    "anxiety_question":"On a scale of 1 to 5, how would you rate your ANXIETY about your pregnancy today?",
+    "education_level_options": "Did not graduate|High school diploma or GED|Associate’s Degree|Four-Year Degree|Graduate Degree|Prefer not to answer",
+    "feeling_statement":"Now, I want to ask how you are FEELING right now. These questions are valuable to help me understand you. There’s no wrong answer.",
+    "anxiety_question":"On a scale of 1 to 5, how would you rate your ANXIETY today about your pregnancy?",
     "confidence_question":"On a scale of 1 to 5, how would you rate your CONFIDENCE today in your ability to manage the challenges of pregnancy?",
-    "intake_over":"Alright. That’s it for today! After this, I’ll message you with new topics to discuss periodically. Also, you can say “menu” any time and learn about my features and capabilities. Til next time!",
+    "intake_over":"Alright. That’s it for today! After this, I’ll message you periodically with new topics to discuss. You can also say help any time to change settings or learn about my features. Talk to you soon!",
     "learn_more":"To learn more about me, go to http://www.alma-bot.com. There you will find information about my purpose, history, development team, sponsors and a library of helpful information about managing pregnancy.",
     "due_date_in_past":"I’m sorry, that’s not a valid date it seems to be in the past",
     "due_date_too_far_away":"I’m sorry, you said your due date is more than 290 days away. If you are a human, you can’t have that due date"
