--- a/locale/en/index.json
+++ b/locale/en/index.json
@@ -2,7 +2,9 @@
     "greeting": "Hi! Welcome! I’m Alma – a messaging bot that helps women manage pregnancies. I ask you questions and provide answers. Talking to me is always free. ",
     "welcome_back": "Welcome back {0}!.  Alma is a free messenging service to help pregnant women. I ask you questions and provide answers. Si prefiere Español, escribe 'Español'",
     "about":"Alma bot is a messaging service to support women throughout their pregnancies. Every woman deserves to feel supported. I ask you questions and provide answers related to health and life. This is a free service and your answers are always kept confidential. Go to www.alma-bot.com for more info.",
-    "intake_start": "Can you provide me with some information? I will never ask you for money or share your personal information without permission. Enter 'Quit' to stop at anytime",
+    "profile_start": "So we can get to know each other better, can you tell me about your self.",
+    "never_share": "I will never ask you for money or share your personal information without permission. Enter 'Quit' to stop at anytime",
+    "intake_start": "Can you provide me with some information about your pregancy?",
     "what_is_your_name": "What is your name?",
     "intake_edit": "Lets re-fillout the details about your pregancy",
     "instructions": "Do Stuff",
